--- a/Pic 5/Pic5.html
+++ b/Pic 5/Pic5.html
@@ -11,7 +11,7 @@
   <body>
   <div class="main">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
-      <a href="" class="navbar-brand ms-2"><img src="../Images/Logo.png" alt="Logo"></a>
+      <a href="index.html" class="navbar-brand ms-2"><img src="Images/Logo.png" alt="Logo"></a>
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#Menu">
         <span class="navbar-toggler-icon"></span>
       </button>
