--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/1.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -52,9 +52,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/2.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -64,9 +64,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/3.jfif" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -76,9 +76,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/4.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -88,9 +88,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/5.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -100,9 +100,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/6.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -112,9 +112,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/7.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -124,9 +124,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/8.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -136,9 +136,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/9.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -148,9 +148,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/10.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -160,9 +160,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/11.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -172,9 +172,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2" style="width: 18rem;">
+            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
               <img src="Images/12.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
