--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/1.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -54,7 +54,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/2.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -66,7 +66,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/3.jfif" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -78,7 +78,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/4.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -90,7 +90,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/5.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -102,7 +102,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/6.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -114,7 +114,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/7.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -126,7 +126,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/8.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -138,7 +138,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/9.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -150,7 +150,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/10.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
@@ -162,7 +162,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/11.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Nulla Facilisi</h5>
@@ -174,7 +174,7 @@
         </div>
         <div class="col-12 col-lg-3">
           <div class="card-group">
-            <div class="card mt-2 ms-5 ms-lg-0" style="width: 18rem;">
+            <div class="card mt-2" style="width: 18rem;">
               <img src="Images/12.jpg" class="card-img-top" alt="Picture">
               <div class="card-body">
                 <h5 class="card-title">Ut Eu</h5>
