--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </nav>
     <div class="middle" style="padding-top: 70px;">
     <div class="container">
-      <div class="row">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
 
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/1.jpg" class="card-img-top" alt="Picture">
@@ -52,7 +52,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/2.jpg" class="card-img-top" alt="Picture">
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/3.jfif" class="card-img-top" alt="Picture">
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/4.jpg" class="card-img-top" alt="Picture">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/5.jpg" class="card-img-top" alt="Picture">
@@ -100,7 +100,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/6.jpg" class="card-img-top" alt="Picture">
@@ -112,7 +112,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/7.jpg" class="card-img-top" alt="Picture">
@@ -124,7 +124,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/8.jpg" class="card-img-top" alt="Picture">
@@ -136,7 +136,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/9.jpg" class="card-img-top" alt="Picture">
@@ -148,7 +148,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/10.jpg" class="card-img-top" alt="Picture">
@@ -160,7 +160,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/11.jpg" class="card-img-top" alt="Picture">
@@ -172,7 +172,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-3">
+        <div class="col">
           <div class="card-group">
             <div class="card mt-2" style="width: 18rem;">
               <img src="Images/12.jpg" class="card-img-top" alt="Picture">
